added patient investigations
